# keiperla.github.io

./: .gitignore  .nojekyll  README.md  _quarto.yml  index.html  pyproject.toml  robots.txt  search.json  sitemap.xml
Project/: _quarto.yml  about.html  about.qmd  contact.html  contact.qmd  custom.scss  index.html  index.qmd  projects.html  projects.qmd
_site/: search.json
_site/Project/: about.html  contact.html  index.html  projects.html
_site/site_libs/bootstrap/: bootstrap-83bb35abff21b75eb0956cd1cf630e1e.min.css  bootstrap-f4dface8493bb2b27ee7443aff026ece.min.css
site_libs/bootstrap/: bootstrap-688f867e5e1fb278e6fa14e17a09d666.min.css  bootstrap-afe676ac86cdc05d4d17cde563d0aa01.min.css
