[project]
name = "keiperla-github-io"
version = "0.1.0"
description = ""
authors = [
    {name = "keiperla",email = "keiperla@bu.edu"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
]

[tool.poetry]
packages = [{include = "keiperla"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
